# upwork_scraper

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
src/upwork_scraper/: auth_handlers.py  datatypes.py  helper_Functions.py  scraper.py
src/upwork_scraper.egg-info/: PKG-INFO
tests/: test_selenium_driver.py
